# test-game

./: Cargo.toml  LICENSE  index.html
.github/workflows/: release.yaml
assets/: testing.ldtk
assets/levels/: testing.ldtk
src/: level.rs  lib.rs  loading.rs  main.rs  menu.rs
web/: style.css
