[package]
name = "test-game"
version = "0.0.1"
edition = "2021"
license = "MIT"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.10.0", default-features = false }
bevy_rapier2d = {version = "0.21.0", features = ["wasm-bindgen"] }
bevy_tweening = "0.7.0"
spew = "0.2.1"

[features]
default = ["dev"]
core = ["bevy/animation", "bevy/bevy_asset", "bevy/bevy_core_pipeline", "bevy/bevy_render", "bevy/bevy_scene", "bevy/bevy_sprite", "bevy/bevy_text", "bevy/bevy_ui", "bevy/bevy_winit", "bevy/filesystem_watcher", "bevy/png", "bevy/serialize", "bevy/vorbis"]
dev = ["core", "bevy/x11", "bevy/dynamic_linking"]
wasm = ["core"]

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
