[package]
name = "test-game"
version = "0.0.4"
edition = "2021"
license = "MIT"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.10.0", default-features = false }
bevy_ecs_ldtk = { version = "0.5.0", features = ["atlas"] }
bevy_kira_audio = "0.15.0"
bevy_rapier2d = { version = "0.21.0", features = ["wasm-bindgen"] }
bevy_tweening = "0.7.0"
spew = "0.2.1"

[features]
default = ["dev"]
core = [
    "bevy/animation",
    "bevy/bevy_asset",
    "bevy/bevy_core_pipeline",
    "bevy/bevy_render",
    "bevy/bevy_scene",
    "bevy/bevy_sprite",
    "bevy/bevy_text",
    "bevy/bevy_ui",
    "bevy/bevy_winit",
    "bevy/filesystem_watcher",
    "bevy/serialize",
    "bevy/png",
]
dev = ["core", "bevy/x11", "bevy/dynamic_linking"]
wasm = ["core"]

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[patch.crates-io]
bevy_ecs_ldtk = { version = "0.5.0", git = "https://github.com/Trouv/bevy_ecs_ldtk.git", rev = "d8e0c6d" }
bevy_ecs_tilemap = { version = "0.9.0", git = "https://github.com/geieredgar/bevy_ecs_tilemap", branch = "bevy_track" }
